Updating the notebook

--- a/MATH60082 - Compfin library example.ipynb
+++ b/MATH60082 - Compfin library example.ipynb
@@ -7,7 +7,10 @@
    "outputs": [],
    "source": [
     "#include \"include/math60082_cn.hpp\"\n",
+    "#include \"include/math60082_sor.hpp\"\n",
     "#include <iostream>\n",
+    "#include <vector>\n",
+    "#include <chrono>\n",
     "using namespace std;"
    ]
   },
@@ -29,54 +32,105 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.841345"
+      "0.5\n",
+      "0.841345\n",
+      "0.97725\n"
      ]
     }
    ],
    "source": [
-    "cout << MATH60082::normalDistribution(1.);"
+    "cout << MATH60082::normalDistribution(0.) << \"\\n\";\n",
+    "cout << MATH60082::normalDistribution(1.) << \"\\n\";\n",
+    "cout << MATH60082::normalDistribution(2.) << \"\\n\";"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " n    | V_cn     | V_exact  | error   \n",
-      "20 | 0.26121 | 0.273152 | -0.0119412\n",
-      "40 | 0.271037 | 0.273152 | -0.00211422\n",
-      "80 | 0.2729 | 0.273152 | -0.000251822\n",
-      "160 | 0.273158 | 0.273152 | 6.52652e-06\n",
-      "320 | 0.273123 | 0.273152 | -2.89602e-05\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "// declare and initialise Black Scholes parameters\n",
     "double S0,X,T,r,sigma;\n",
     "// declare and initialise grid paramaters \n",
     "int iMax,jMax;\n",
     "// declare and initialise local variables (ds,dt)\n",
-    "double SMax;\n",
+    "double SMax;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " n    | V_cn     | V_exact  | error | CPU (time) \n",
+      "20 | 0.247269 | 0.262918 | -0.0156485 | 0\n",
+      "40 | 0.259262 | 0.262918 | -0.00365595 | 0\n",
+      "80 | 0.262016 | 0.262918 | -0.000902232 | 0.001\n",
+      "160 | 0.262693 | 0.262918 | -0.00022486 | 0.006\n",
+      "320 | 0.262862 | 0.262918 | -5.61718e-05 | 0.046\n",
+      "640 | 0.262904 | 0.262918 | -1.40403e-05 | 0.368\n",
+      "1280 | 0.262914 | 0.262918 | -3.5099e-06 | 3.127\n"
+     ]
+    }
+   ],
+   "source": [
     "// initialise Black Scholes parameters\n",
-    "S0=1.973;X=2.;T=1.;r=0.05;sigma=0.4;\n",
-    "// initialise grid paramaters \n",
-    "iMax=40;jMax=40;SMax=2*X;\n",
-    "cout << \" n    | V_cn     | V_exact  | error   \\n\";\n",
-    "for(int k=1;k<=5;k++)\n",
+    "S0=2.;X=2.;T=1.;r=0.05;sigma=0.4;\n",
+    "cout << \" n    | V_cn     | V_exact  | error | CPU (time) \\n\";\n",
+    "for(int k=1;k<=7;k++)\n",
     "{\n",
     "    int n=10*pow(2,k);\n",
     "    iMax = n;\n",
     "    jMax = n;\n",
+    "    \n",
     "    double value_exact = MATH60082::europeanPut_exact(S0,X,T,r,sigma);\n",
-    "    double value_cn = MATH60082::europeanPut_CN(S0,X,T,r,sigma,iMax,jMax,5*X,1.2,1.e-8,1000);\n",
+    "    auto start = chrono::system_clock::now();\n",
+    "    double value_cn = MATH60082::europeanPut_CN(S0,X,T,r,sigma,iMax,jMax,5*X,1.4,1.e-10,10000);\n",
+    "    auto end = chrono::system_clock::now();\n",
+    "    auto elapsed = chrono::duration_cast<chrono::milliseconds>(end - start);\n",
+    "  \n",
     "    cout << n << \" | \" << value_cn;\n",
     "    cout << \" | \" << value_exact << \" | \" ;\n",
-    "    cout << value_cn - value_exact << \"\\n\";\n",
+    "    cout << value_cn - value_exact << \" | \" ;\n",
+    "    cout << elapsed.count()/1000.<< \"\\n\";\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x = { 1 1.75 2.25 2.25 } after 50 iterations.\n"
+     ]
+    }
+   ],
+   "source": [
+    "{\n",
+    "    // declare vector to store matrix A\n",
+    "vector<double> a = { 0.,-1,-1,-1};\n",
+    "vector<double> b = { 1.,2,2,1};\n",
+    "vector<double> c = { 0.,-1,-1,0.};\n",
+    "// declare vector for the rhs v and solution x \n",
+    "vector<double> rhs = {1.,0.25,0.5,0.};\n",
+    "vector<double> x;\n",
+    "// reset initial guess for x\n",
+    "x = {0.,0.,0.,0.};\n",
+    "int sor;\n",
+    "// iterMax=50, tol=1.e-6, omega = 1\n",
+    "MATH60082::sorSolve(a,b,c,rhs,x,50,1.e-6,1.,sor);\n",
+    "cout << \"x = { \";\n",
+    "for(auto xi : x)cout << xi << \" \";\n",
+    "cout << \"} after \" << sor+1 << \" iterations.\\n\";\n",
     "}"
    ]
   },
