--- a/MATH60082 - Compfin library example.ipynb
+++ b/MATH60082 - Compfin library example.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -68,19 +68,19 @@
      "output_type": "stream",
      "text": [
       " n    | V_cn     | V_exact  | error | CPU (time) \n",
-      "20 | 0.0736598 | 0.111471 | -0.0378108 | 0\n",
-      "40 | 0.102967 | 0.111471 | -0.00850356 | 0\n",
-      "80 | 0.109505 | 0.111471 | -0.00196561 | 0.004\n",
-      "160 | 0.110986 | 0.111471 | -0.000484418 | 0.015\n",
-      "320 | 0.11135 | 0.111471 | -0.000120694 | 0.053\n",
-      "640 | 0.11144 | 0.111471 | -3.01481e-05 | 0.159\n",
-      "1280 | 0.111463 | 0.111471 | -7.53545e-06 | 0.534\n"
+      "20 | 0.118344 | 0.136688 | -0.0183438 | 0\n",
+      "40 | 0.135075 | 0.136688 | -0.0016132 | 0.001\n",
+      "80 | 0.136721 | 0.136688 | 3.24821e-05 | 0.004\n",
+      "160 | 0.136247 | 0.136688 | -0.000441631 | 0.012\n",
+      "320 | 0.136589 | 0.136688 | -9.90283e-05 | 0.028\n",
+      "640 | 0.136669 | 0.136688 | -1.96649e-05 | 0.102\n",
+      "1280 | 0.136685 | 0.136688 | -2.80682e-06 | 0.418\n"
      ]
     }
    ],
    "source": [
     "// initialise Black Scholes parameters\n",
-    "S0=2.;X=2.;T=1.;r=0.05;sigma=0.2;\n",
+    "S0=1.936;X=2.;T=1.;r=0.05;sigma=0.2;\n",
     "cout << \" n    | V_cn     | V_exact  | error | CPU (time) \\n\";\n",
     "for(int k=1;k<=7;k++)\n",
     "{\n",
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
