--- a/MATH60082 - Examples Sheet 7 - Crank-Nicolson.ipynb
+++ b/MATH60082 - Examples Sheet 7 - Crank-Nicolson.ipynb
@@ -20,8 +20,7 @@
     "\n",
     "Again, the easiest thing to do is just to declare these at the top of the program before you start doing anything with them.\n",
     "\n",
-    "A sample program structure is given in the example code  \n",
-    "[click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/solutions-sheet-7-1-0.cpp). I have initialised the variables and put the loop in to save time. At each timestep we must solve the matrix equation\n",
+    "A sample program structure is given in the example code [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/solutions-sheet-7-1-0.cpp) and the final solution is [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/solutions-sheet-7-1-1.cpp). I have initialised the variables and put the loop in to save time. At each timestep we must solve the matrix equation\n",
     "$$\n",
     "A\\mathbf{V} = b.\n",
     "$$\n",
@@ -220,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
