--- a/MATH60082 - Examples Sheet 7 - SOR.ipynb
+++ b/MATH60082 - Examples Sheet 7 - SOR.ipynb
@@ -5,6 +5,11 @@
    "metadata": {},
    "source": [
     "# SOR Method\n",
+    "\n",
+    "Click on the link for the interactive version:\n",
+    "[![Binder](https://mybinder.org/badge.svg)](https://mybinder.org/v2/gh/pjohno/MATH60082/master?filepath=MATH60082%20-%20Examples%20Sheet%207%20-%20SOR.ipynb)\n",
+    "\n",
+    "\n",
     "Consider the matrix equation\n",
     "$$\n",
     "A\\mathbf{x}=\\mathbf{b}.\n",
@@ -143,7 +148,9 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -309,8 +316,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = { 1 1.75 2.25 2.25 } after 19 iterations.\n"
+      "Converged after 19 iterations.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{ 1, 1.75, 2.25, 2.25 }"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -350,9 +367,71 @@
     "    if(error<tol)\n",
     "      break;\n",
     "  }\n",
-    "  cout << \"x = { \";\n",
-    "  for(auto xi : x)cout << xi << \" \";\n",
-    "  cout << \"} after \" << sor+1 << \" iterations.\\n\";\n",
+    "  cout << \"Converged after \" << sor+1 << \" iterations.\\n\";\n",
+    "}\n",
+    "x"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can easily convert this into a function, which we can put in a separate file [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/math60082_sor.hpp) or above the main function. The function is called `sorSolve(...)` where the arguments are `a`, `b`, `c`, `rhs`, `x`, `iterMax`, `tol`, `omega` and `sor`. The definition of each parameter can be implied from the code above. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "/* \n",
+    "ON INPUT:\n",
+    "a, b and c -- are the diagonals of the matrix\n",
+    "rhs        -- is the right hand side\n",
+    "x          -- is the initial guess\n",
+    "iterMax    -- is maximum iterations\n",
+    "tol        -- is the tolerance level\n",
+    "omega      -- is the relaxation parameter \n",
+    "sor        -- not used\n",
+    "ON OUTPUT:\n",
+    "a, b, c, rhs        -- unchanged\n",
+    "x                   -- solution to Ax=b\n",
+    "iterMax, tol, omega -- unchanged\n",
+    "sor                 -- number of iterations to converge\n",
+    "*/\n",
+    "void sorSolve(const std::vector<double> &a,const std::vector<double> &b,const std::vector<double> &c,const std::vector<double> &rhs,\n",
+    "std::vector<double> &x,int iterMax,double tol,double omega,int &sor )\n",
+    "{\n",
+    "    // assumes vectors a,b,c,d,rhs and x are same size (doesn't check)\n",
+    "    int n=a.size()-1;\n",
+    "    // sor loop\n",
+    "  for(sor=0;sor<iterMax;sor++)\n",
+    "  {\n",
+    "    double error=0.;\n",
+    "    // implement sor in here\n",
+    "    {\n",
+    "      double y = (rhs[0] - c[0]*x[1])/b[0];\n",
+    "      x[0] = x[0] + omega*(y-x[0]); \n",
+    "    }\n",
+    "    for(int j=1;j<n;j++)\n",
+    "    {\n",
+    "      double y = (rhs[j] - a[j]*x[j-1] - c[j]*x[j+1])/b[j];\n",
+    "      x[j] = x[j] + omega*(y-x[j]); \n",
+    "    }\n",
+    "    {\n",
+    "      double y = (rhs[n] - a[n]*x[n-1])/b[n];\n",
+    "      x[n] = x[n] + omega*(y-x[n]); \n",
+    "    }\n",
+    "    // calculate residual norm ||r|| as sum of absolute values\n",
+    "    error += std::fabs(rhs[0] - b[0]*x[0] - c[0]*x[1]);\n",
+    "    for(int j=1;j<n;j++) \n",
+    "        error += std::fabs(rhs[j] - a[j]*x[j-1] - b[j]*x[j] - c[j]*x[j+1]);\n",
+    "    error += std::fabs(rhs[n] - a[n]*x[n-1] - b[n]*x[n]);\n",
+    "    // make an exit condition when solution found\n",
+    "    if(error<tol)\n",
+    "      break;\n",
+    "  }\n",
     "}"
    ]
   },
@@ -360,31 +439,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can easily convert this into a function, which we have put in a separate file [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/math60082_sor.hpp). The function can be called as `MATH60082::sorSolve(...)` where the arguments are `a`, `b`, `c`, `rhs`, `x`, `iterMax`, `tol`, `omega` and `sor`. The definition of each parameter can be implied from the code above. \n",
-    "\n",
     "Once in a function we can play around to see the effect of the different input parameters. For instance, with defaults as above we get:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#include \"math60082_sor.hpp\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = { 1 1.75 2.25 2.25 } after 50 iterations.\n"
+      "Converged after 50 iterations.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{ 1, 1.75, 2.25, 2.25 }"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -392,10 +470,9 @@
     "x = {0.,0.,0.,0.};\n",
     "int sor;\n",
     "// iterMax=50, tol=1.e-6, omega = 1\n",
-    "MATH60082::sorSolve(a,b,c,rhs,x,50,1.e-6,1.,sor);\n",
-    "cout << \"x = { \";\n",
-    "for(auto xi : x)cout << xi << \" \";\n",
-    "cout << \"} after \" << sor+1 << \" iterations.\\n\";"
+    "sorSolve(a,b,c,rhs,x,50,1.e-6,1.,sor);\n",
+    "cout << \"Converged after \" << sor+1 << \" iterations.\\n\";\n",
+    "x"
    ]
   },
   {
@@ -407,25 +484,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "x = { 1 1.75 2.25 2.25 } after 40 iterations.\n"
+      "Converged after 40 iterations.\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{ 1, 1.75, 2.25, 2.25 }"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "// reset initial guess for x\n",
     "x = {0.,0.,0.,0.};\n",
     "// this time omega = 1.1\n",
-    "MATH60082::sorSolve(a,b,c,rhs,x,50,1.e-6,1.1,sor);\n",
-    "cout << \"x = { \";\n",
-    "for(auto xi : x)cout << xi << \" \";\n",
-    "cout << \"} after \" << sor+1 << \" iterations.\\n\";"
+    "sorSolve(a,b,c,rhs,x,50,1.e-6,1.1,sor);\n",
+    "cout << \"Converged after \" << sor+1 << \" iterations.\\n\";\n",
+    "x"
    ]
   },
   {
@@ -437,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -470,7 +556,7 @@
     "    x = {0.,0.,0.,0.};\n",
     "    // this time omega = 1.1\n",
     "    double omega = varyOmega/10.;\n",
-    "    MATH60082::sorSolve(a,b,c,rhs,x,5000,1.e-6,omega,sor);\n",
+    "    sorSolve(a,b,c,rhs,x,5000,1.e-6,omega,sor);\n",
     "    cout << \"Try with omega = \" << omega << \" we get x = { \";\n",
     "    for(auto xi : x)cout << xi << \" \";\n",
     "    cout << \"} after \" << sor+1 << \" iterations.\\n\";\n",
