updated the environment to include gnuplot

--- a/MATH60082 - Examples Sheet 7 - Crank Nicolson American Option.ipynb
+++ b/MATH60082 - Examples Sheet 7 - Crank Nicolson American Option.ipynb
@@ -44,7 +44,7 @@
     "$$\n",
     "\\sum_j \\epsilon_j < \\text{tol}^2\n",
     "$$\n",
-    "which should guarantee our solution is accurate to the level `tol`. \n",
+    "which should guarantee our solution is accurate to the level `tol`. The final solution is also on the web [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/solutions-sheet-7-3-1.cpp).\n",
     "\n",
     "First include standard libraries:"
    ]
