--- a/MATH60082 - Examples Sheet 7 - Crank Nicolson Analysis.ipynb
+++ b/MATH60082 - Examples Sheet 7 - Crank Nicolson Analysis.ipynb
@@ -507,7 +507,7 @@
     "$$\n",
     "V_{\\text{extrap}^2} = \\frac{16V_{4n} -8V_{2n} + V_n}{9} .\n",
     "$$\n",
-    "This works for $S=X$, but for values that are not on grid nodes you would need an extremely accurate interpolation to make it work."
+    "This works for $S=X$, but for values that are not on grid nodes you would need an extremely accurate interpolation to make it work. The final solution is also on the web [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/solutions-sheet-7-2-1.cpp)."
    ]
   }
  ],
