--- a/MATH60082 - Examples Sheet 7 - SOR.ipynb
+++ b/MATH60082 - Examples Sheet 7 - SOR.ipynb
@@ -42,7 +42,7 @@
     "\\end{array}\n",
     "\\right) .\n",
     "$$\n",
-    "Open the example code on my website [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/solutions-sheet-7-0-0.cpp), it will provide a template to implement the code outlined in this demonstration. Out aim is to implement SOR to find the solution $\\mathbf{x}$. The task will be split into several steps:\n",
+    "Open the example code on my website [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/solutions-sheet-7-0-0.cpp), it will provide a template to implement the code outlined in this demonstration. The final solution is also on the web [click here](http://www.maths.manchester.ac.uk/~pjohnson/resources/math60082/MYCODES/solutions-sheet-7-0-1.cpp). Out aim is to implement SOR to find the solution $\\mathbf{x}$. The task will be split into several steps:\n",
     "\n",
     "1. Copy the code into a new project, check it compiles and runs.\n",
     "2. Update your guess for $\\mathbf{x}$ by rearranging each line of the matrix equation to get an equation for $x_0$,  $x_1$, $x_2$ and $x_3$. For example $$x_0=(b_0-A_{0,1}x_1-A_{0,2}x_2-A_{0,3}x_3)/A_{0,0}.$$ Put the four expressions for each value of $x_j$ into the code at the appropriate place, take advantage of the zeros in the matrix to simplify formula.\n",
