changed plot file location

--- a/MATH60082 - Compfin library example.ipynb
+++ b/MATH60082 - Compfin library example.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -67,13 +67,22 @@
        "0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "system(\"gnuplot \\\"gnuplot/plotSinFunction.plt\\\"\")"
+    "system(\"gnuplot \\\"plotFiles/plotSinFunction.plt\\\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ".> out.txt"
    ]
   },
   {
@@ -144,11 +153,11 @@
       " n    | V_cn     | V_exact  | error | CPU (time) \n",
       "20 | 0.134715 | 0.136688 | -0.00197309 | 0\n",
       "40 | 0.148865 | 0.136688 | 0.0121772 | 0\n",
-      "80 | 0.15086 | 0.136688 | 0.0141719 | 0.003\n",
-      "160 | 0.150045 | 0.136688 | 0.0133566 | 0.01\n",
-      "320 | 0.150447 | 0.136688 | 0.013759 | 0.033\n",
-      "640 | 0.150541 | 0.136688 | 0.0138525 | 0.088\n",
-      "1280 | 0.150561 | 0.136688 | 0.0138723 | 0.206\n"
+      "80 | 0.15086 | 0.136688 | 0.0141719 | 0.001\n",
+      "160 | 0.150045 | 0.136688 | 0.0133566 | 0.005\n",
+      "320 | 0.150447 | 0.136688 | 0.013759 | 0.017\n",
+      "640 | 0.150541 | 0.136688 | 0.0138525 | 0.059\n",
+      "1280 | 0.150561 | 0.136688 | 0.0138723 | 0.194\n"
      ]
     }
    ],
@@ -223,6 +232,15 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    ".> out.txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {
     "scrolled": false
    },
@@ -233,7 +251,7 @@
        "6.25"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -242,6 +260,23 @@
     "double a = 2.5;\n",
     "double asqr = sqr(a);\n",
     "asqr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "No documentation found for \n"
+     ]
+    }
+   ],
+   "source": [
+    "?"
    ]
   },
   {
