--- a/notebooks/MATH60082 - Examples Sheet 7 - Crank Nicolson American Option.ipynb
+++ b/notebooks/MATH60082 - Examples Sheet 7 - Crank Nicolson American Option.ipynb
@@ -227,19 +227,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.28397"
+      "0.129755"
      ]
     }
    ],
    "source": [
-    "cout << americanPut_CN(S0,X,T,r,sigma,iMax,jMax,SMax,1,1.e-6,1000);"
+    "cout << americanPut_CN(2.5,X,T,r,sigma,iMax,jMax,SMax,1,1.e-6,1000);"
    ]
   },
   {
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -296,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
